--- a/playbook.yml
+++ b/playbook.yml
@@ -9,6 +9,17 @@
     apt:
       update_cache: yes
       cache_valid_time: 3600
+      
+  - name: Allow everything and enable UFW
+    ufw:
+    state: enabled
+    policy: allow    
+    
+  - name: Allow all access to tcp port 80
+    ufw:
+      rule: allow
+      port: '80'
+      proto: tcp    
 
   - name: "install nginx"
     apt:
