--- a/playbook-ssl.yml
+++ b/playbook-ssl.yml
@@ -19,10 +19,12 @@
     apt:
       update_cache: yes
       cache_valid_time: 3600
+      
   - name: Ensure some basic tools are installed.
     ansible.builtin.apt:
       name: aptitude,vim,ntp,ca-certificates,htop,rsync,open-vm-tools,gpg,sudo,iproute2,iptables,git,libnss-libvirt
       state: latest   
+      
   - name: Allow all access to tcp port 80
     ufw:
       rule: allow
@@ -56,6 +58,7 @@
       group: root
       mode: '0644'
     notify: restart nginx
+    
   - name: "Create required directories in /etc/letsencrypt"
     file:
       path: "/etc/letsencrypt/{{ item }}"
@@ -68,10 +71,13 @@
       - certs
       - csrs
       - keys
+      
   - name: "Generate a Let's Encrypt account key"
     shell: "if [ ! -f {{ letsencrypt_account_key }} ]; then openssl genrsa 4096 | sudo tee {{ letsencrypt_account_key }}; fi"      
+    
   - name: "Generate Let's Encrypt private key"
     shell: "openssl genrsa 4096 | sudo tee /etc/letsencrypt/keys/{{ domain }}.key"
+    
   - name: "Generate Let's Encrypt CSR"
     shell: "openssl req -new -sha256 -key /etc/letsencrypt/keys/{{ domain }}.key -subj \"/CN={{ domain }}\" -reqexts SAN -config <(cat /etc/ssl/openssl.cnf <(printf \"\n[SAN]\nsubjectAltName=DNS:{{ domain }},DNS:www.{{ domain }}\")) | sudo tee /etc/letsencrypt/csrs/{{ domain }}.csr"
     args:
@@ -90,6 +96,7 @@
       fullchain_dest: "{{ letsencrypt_certs_dir }}/fullchain_{{ domain }}.crt"
       remaining_days: 91
     register: acme
+    
   - name: "Create .well-known/acme-challenge directory"
     file:
       path: /var/www/html/.well-known/acme-challenge
@@ -108,7 +115,8 @@
     with_items:
       - "(( domain }}"
       - "www.{{ domain }} "  
-    failed_when: "'error' in acme.stderr"    
+    failed_when: "'error' in acme.stderr"   
+    
   - name: "error"
     debug:
       msg: "{{ acme.stderr }}"
@@ -126,7 +134,25 @@
       chain_dest: "{{ letsencrypt_certs_dir }}/chain_{{ domain }}.crt"
       fullchain_dest: "{{ letsencrypt_certs_dir }}/fullchain_{{ domain }}"
       data: "{{ acme }}"    
-  
+      
+  - name: add line in /etc/nginx/nginx.conf
+    blockinfile:
+      path: /etc/nginx/nginx.conf
+      backup: yes
+      marker: "    <!-- {mark} ANSIBLE MANAGED BLOCK -->"
+      insertafter: 'http {'
+      block: |
+        server {
+        listen 443;
+        ssl on;
+        ssl_certificate  /etc/letsencrypt/certs/jenkins.trycloud.co.in.crt;
+        ssl_certificate_key /etc/letsencrypt/keys/jenkins.trycloud.co.in.key;
+        location / {
+        root /var/www/jenkins.trycloud.co.in/html;
+        index index.html;
+        }
+        } 
+        
   - name: "sync website"
     synchronize:
       src: site/
